# Emotion

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: emotions.launch
src/: camera.py
srv/: jinko_games_message.srv
